--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,36 +1,35 @@
-# Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: meermubashar
+repo: upptime
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
-  - name: IPv6 test
-    url: forwardemail.net
-    port: 80
-    check: "tcp-ping"
-    ipv6: true
+  - name: Meer Mubashar
+    url: https://meermubashar.com
+  - name: Suii Dhaaga Clothing
+    url: https://suiidhaagaclothing.com
+  - name: The Media Lenses
+    url: https://themedialenses.com
+
+assignees:
+  - meermubashar
 
 status-website:
-  # Add your custom domain name, or remove the `cname` line if you don't have a domain
-  # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
+  cname: status.meermubashar.com
+  baseUrl: /
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  name: Meer Mubashar Status
+  introTitle: "**Meer Mubashar Status** monitors uptime for all my key sites."
+  introMessage: >
+    This status page shows live availability and historical
+    performance data for my sites. It is powered entirely by
+    GitHub Actions, Issues, and Pages using Upptime.
   navbar:
     - title: Status
       href: /
+    - title: Main Website
+      href: https://meermubashar.com
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
 
-# Upptime also supports notifications, assigning issues, and more
-# See https://upptime.js.org/docs/configuration
+i18n:
+  footer: >
+    Powered by [Upptime](https://upptime.js.org) and maintained by [Meer Mubashar](https://meermubashar.com).
